lab1/Test/L1-A-12-32.output
Error Type B at Line 14
Error Type A at Line 17
Error Type B at Line 29
Error Type B at Line 35
