lab1/Test/L1-A-12-32.cmm
int ;
float _kIwODJ5ZfIfdosTG , ZF1wxFfp 

;
struct lU2JKjkT0mQFbY0QZqv E3Trh11a ( int EtNjRc6P_kyR 
  [ 1785280997 ] ) {
}
struct {
  struct EzLs OVo5BmB8NpnJG78ZO , MzfE0C0r2B , RfKJkva0QZi6m_9OE 
    = i5V = i == bVTqCFeQK / - V5i [ O7eU = vBoBDjddAs81WXdRd 
    = Ep5CG_m7r9 || TnfUZ5G && OZjNPu >= MXMwdQ - ! FPdA52Zt1WZmb9 
    ( IBP , wq4iN9QsW != Zaf3eTvXbBl6SDq + sHGimy7v / 
    ( OUJcUYlE7a1jroV6R > LtaqgI / ! j9 [ ! ! ! YYGMqr9vgK 
    [ && OSXTnLKHy3Jr >= MLZk0aUB4e / Z7o3VpxNpPAxP8Xom 
    ] ] . AzXFUanuToCFmVD9 < ! 232918941 <= 528190974.4204552 
    ) . MNus2OWVXDFbaRJTMm ) * ! ! g7DmzID ( ) ] ;
  struct v2R0jhk10MDDFy ^R6CIIAH7I7Mj_6Hc9o1 ;
};
int V 
;
struct YI2Zdt {
  struct NESscixUAG3RSeB3z A4MmL7PQxc5o7Je4vql ;
  int U4wjfZu1PWkjA5A32awT ;
}pr 
;
int V5DIk ( ) {
  while ( FHczZWGU )   return onKksckc7S 

}
int J9xD7tT ( int ArRakAYK_axlUw2O , int M ) {
  SFi3A8rHwYqN6uf ;
  if ( rINXEd4ZgVN )   DclWafGKGqOa ;
else   if ( dCbeoBCd8dlJDd8 )   if ( _eHTWIRARZjZ3wUU 
    )   Qk 
else {
  }


  if ( J9LRnu9_qe9f )   Rk4AQ9bdnJ74 ;

}
